<resources>

    <string name="facebook_app_id" translatable="false">375547703532564</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb375547703532564</string>

    <string name="app_name">Eat More Salad</string>
    <string name="bottom_nav_item_home">Home</string>
    <string name="bottom_nav_item_order_history">Order History</string>
    <string name="bottom_nav_item_schedule">Schedule</string>
    <string name="bottom_nav_item_info">Info</string>

    <!-- General -->
    <string name="general_skip">Skip</string>

    <!-- Welcome -->
    <string name="welcome_brought_to_you_by">BROUGHT TO YOU BY</string>
    <string name="welcome_sign_up">Sign Up</string>
    <string name="welcome_log_in">Log In</string>
    <string name="welcome_already_have_account">Already have an account?</string>
    <string name="welcome_east_agile">East Agile</string>
    <string name="welcome_or_continue_with">Or continue with</string>
    <string name="welcome_feel_well_live_well">-&#160;&#160;&#160;&#160;&#160;Feel Well&#160;&#160;&#160;-&#160;&#160;&#160;Live Well&#160;&#160;&#160;&#160;&#160;-</string>

    <!-- Tab Title -->
    <string name="tab_title_my_order">My Order</string>
    <string name="tab_title_latest_menu">Latest Menu</string>
</resources>
